어려운데 재밌다!

--- a/zero_base/zero-base1.html
+++ b/zero_base/zero-base1.html
@@ -24,7 +24,7 @@
 
 </head>
 <body>
-    <script src="zeroBase.js"></script>
+    <script src="zeroBase2.js"></script>
     <div>
         <h1>h1태그 제목으로 쓰인다</h1>
             <div><p>div>p 태그내용</p></div>
