--- a/zero_base/zero-base1.html
+++ b/zero_base/zero-base1.html
@@ -24,9 +24,10 @@
 
 </head>
 <body>
-    <script src="zeroBase2.js"></script>
+   <script src="zeroBase2.js"></script> 
     <div>
         <h1>h1태그 제목으로 쓰인다</h1>
+
             <div><p>div>p 태그내용</p></div>
         <a href="https://zero-base.co.kr/event/dev">제로베이스링크</a>
         <button>버튼</button>
@@ -44,6 +45,7 @@
             class="이곳은 속성(Attribute)의 Value(값)이 된다."</li>
         </ul>
     </div>
+    <button onclick="">zeroBase.js로 이동</button>
 
     <div class="box">
         <p class="text1">123</p>
@@ -54,6 +56,11 @@
             <li></li>
         </ul>
     </div>
+
+    <h2>DOM으로 변경해보기.</h2>
+    <h2 class="h22">h2제목 태그도 같이 바뀌는건가?</h2>
+
+    <script src="zeroBase3.js"></script>
     
 </body>
 </html>
