--- a/zero_base/zero-base1.html
+++ b/zero_base/zero-base1.html
@@ -24,7 +24,7 @@
 
 </head>
 <body>
-   <script src="zeroBase2.js"></script> 
+   <script src="zeroBase4.js"></script> 
     <div>
         <h1>h1태그 제목으로 쓰인다</h1>
 
@@ -60,7 +60,7 @@
     <h2>DOM으로 변경해보기.</h2>
     <h2 class="h22">h2제목 태그도 같이 바뀌는건가?</h2>
 
-    <script src="zeroBase3.js"></script>
+    <!-- <script src="zeroBase3.js"></script> -->
     
 </body>
 </html>
